Name/path change; Add jar build

--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,33 @@ plugins {
     id 'java'
 }
 
-group 'com.axis'
-version '1.0-SNAPSHOT'
-
+group 'com.axis.eiffel.gerrit.herald'
+version '1.0.0'
 sourceCompatibility = 1.8
+
+jar{
+    manifest {
+        attributes 'Main-Class': 'com.axis.eiffel.gerrit.herald.Service'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    exclude ('META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA')
+}
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    implementation 'com.github.eiffel-community:eiffel-gerrit-lib:1.0-beta.1'
+
     implementation 'com.google.code.gson:gson:2.8.5'
     compile 'com.rabbitmq:amqp-client:5.7.2'
     compile 'org.json:json:20180813'
+    
+    compile 'redis.clients:jedis:3.1.0'
 }
