Add property to control whether exchange declarations are active
Previously all exchange declarations were made with
Channel.exchangeDeclare(), i.e. an active declaration that
requires that the user has the configure permission for the
exchange in question. Because that permission allows the
user to delete the exchange it's rarely granted except to
broker administrators.

The new S_EXCHANGE_ACTIVE boolean property controls whether
exchange declarations are active or passive.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -11,6 +11,7 @@ R_VIRTUALHOST=/
 # Sender
 S_EXCHANGE_NAME=gerrit.to.eiffel
 S_EXCHANGE_TYPE=topic
+S_EXCHANGE_ACTIVE=true
 S_USERNAME=guest
 S_PASSWORD=guest
 S_HOST=localhost
